--- a/Website/index.html
+++ b/Website/index.html
@@ -7,17 +7,24 @@
     <title>30 Projects</title>
 
     <link rel="icon" href="logo.png" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-    <script defer src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script
+      defer
+      src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
+    ></script>
+    <script defer src="scripts/script.js"></script>
   </head>
   <body>
-    <div class="carousel" data-flickity='{ "wrapAround": true }'>
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
-      <div class="carousel-cell"></div>
+    <!-- Flickity HTML init -->
+    <div class="main-carousel">
+      <div class="carousel-cell" id="main-banner1"></div>
+      <div class="carousel-cell" id="main-banner2"></div>
+      <div class="carousel-cell" id="main-banner3"></div>
+      <div class="carousel-cell" id="main-banner4"></div>
     </div>
 
     <footer>
