Footer and minor changes

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>30 Projects</title>
 
-    <link rel="icon" href="logo.png" />
+    <link rel="icon" href="imgs/logo.png" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
@@ -19,13 +19,12 @@
     <script defer src="scripts/script.js"></script>
   </head>
   <body>
-    <!-- Flickity HTML init -->
-    <div class="main-carousel">
+    <header class="main-carousel">
       <div class="carousel-cell" id="main-banner1"></div>
       <div class="carousel-cell" id="main-banner2"></div>
       <div class="carousel-cell" id="main-banner3"></div>
       <div class="carousel-cell" id="main-banner4"></div>
-    </div>
+    </header>
 
     <footer>
       <p>&copy; 2024 O Grimório. All rights reserved.</p>
