--- a/index.html
+++ b/index.html
@@ -4,30 +4,127 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>30 Projects</title>
+    <title>O grimório</title>
 
     <link rel="icon" href="imgs/logo.png" />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
+
     <script
       defer
       src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
     ></script>
     <script defer src="scripts/script.js"></script>
   </head>
+
   <body>
     <header class="main-carousel">
-      <div class="carousel-cell" id="main-banner1"></div>
-      <div class="carousel-cell" id="main-banner2"></div>
-      <div class="carousel-cell" id="main-banner3"></div>
-      <div class="carousel-cell" id="main-banner4"></div>
+      <div class="main-carousel__cell" id="main-banner1">
+        <h2 class="main-carousel__title">Lorem Ipsum</h2>
+        <p class="main-carousel__subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+        </p>
+        <a
+          href="https://wa.me/p/7709211875811920/5511954967541"
+          target="_blank"
+          class="main-carousel__btn btn"
+          id="main-btn"
+          draggable="false"
+          >Boom</a
+        >
+      </div>
+      <div class="main-carousel__cell" id="main-banner2">
+        <h2 class="main-carousel__title">Lorem Ipsum</h2>
+        <p class="main-carousel__subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+        </p>
+        <a
+          href="https://wa.me/p/7709211875811920/5511954967541"
+          target="_blank"
+          class="main-carousel__btn btn"
+          id="main-btn"
+          draggable="false"
+          >Boom</a
+        >
+      </div>
+      <div class="main-carousel__cell" id="main-banner3">
+        <h2 class="main-carousel__title">Lorem Ipsum</h2>
+        <p class="main-carousel__subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+        </p>
+        <a
+          href="https://wa.me/p/7709211875811920/5511954967541"
+          target="_blank"
+          class="main-carousel__btn btn"
+          id="main-btn"
+          draggable="false"
+          >Boom</a
+        >
+      </div>
+      <div class="main-carousel__cell" id="main-banner4">
+        <h2 class="main-carousel__title">Lorem Ipsum</h2>
+        <p class="main-carousel__subtitle">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+        </p>
+        <a
+          href="https://wa.me/p/7709211875811920/5511954967541"
+          target="_blank"
+          class="main-carousel__btn btn"
+          id="main-btn"
+          draggable="false"
+          >Boom</a
+        >
+      </div>
     </header>
 
+    <section class="products"></section>
+
+    <section class="categories"></section>
+
+    <section class="shipping">
+      <h2 class="shipping__title">Seu lugar de prazer</h2>
+      <div class="shipping__section">
+        <div class="shipping__icon-container">
+          <div class="shipping__icon icon" id="shipping-icon1"></div>
+        </div>
+        <p class="shipping__text">Frete Grátis em compras acima de R$999,00</p>
+      </div>
+      <div class="shipping__section">
+        <div class="shipping__icon-container">
+          <div class="shipping__icon icon" id="shipping-icon2"></div>
+        </div>
+        <p class="shipping__text">Pacote discreto</p>
+      </div>
+      <div class="shipping__section">
+        <div class="shipping__icon-container">
+          <div class="shipping__icon icon" id="shipping-icon3"></div>
+        </div>
+        <p class="shipping__text">Mais de 150 anos de negócio</p>
+      </div>
+    </section>
+
+    <section class="banner"></section>
+
+    <section class="marcas"></section>
+
+    <section class="testimonials"></section>
+
+    <section class="blog"></section>
+
     <footer>
-      <p>&copy; 2024 O Grimório. All rights reserved.</p>
+      <p>&copy; 2024 O <span>Grimório</span>. All rights reserved.</p>
     </footer>
   </body>
 </html>
