--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap"
       rel="stylesheet"
     />
     <link
@@ -119,12 +119,78 @@
 
     <section class="marcas"></section>
 
-    <section class="testimonials"></section>
+    <section class="testimonials">
+      <h2 class="testimonials__title">
+        Veja a experiência dos nossos maravilhosos clientes
+      </h2>
+      <div class="testimonials__carousel">
+        <div class="testimonials__cell" id="testimonials-banner1">
+          <div class="testimonials__rating">
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">01/01/01</p>
+          </div>
+          <p class="testimonials__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+            quia, libero similique ex natus dolores!
+          </p>
+        </div>
+        <div class="testimonials__cell" id="testimonials-banner1">
+          <div class="testimonials__rating">
+            <p class="testimonials__grade">❤︎❤︎❤︎</p>
+            <p class="testimonials__date">01/01/01</p>
+          </div>
+          <p class="testimonials__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+            quia, libero similique ex natus dolores!
+          </p>
+        </div>
+        <div class="testimonials__cell" id="testimonials-banner1">
+          <div class="testimonials__rating">
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">01/01/01</p>
+          </div>
+          <p class="testimonials__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+            quia, libero similique ex natus dolores!
+          </p>
+        </div>
+        <div class="testimonials__cell" id="testimonials-banner1">
+          <div class="testimonials__rating">
+            <p class="testimonials__grade">❤︎❤︎</p>
+            <p class="testimonials__date">01/01/01</p>
+          </div>
+          <p class="testimonials__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+            quia, libero similique ex natus dolores!
+          </p>
+        </div>
+        <div class="testimonials__cell" id="testimonials-banner1">
+          <div class="testimonials__rating">
+            <p class="testimonials__grade">❤︎</p>
+            <p class="testimonials__date">01/01/01</p>
+          </div>
+          <p class="testimonials__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+            quia, libero similique ex natus dolores!
+          </p>
+        </div>
+        <div class="testimonials__cell" id="testimonials-banner1">
+          <div class="testimonials__rating">
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">01/01/01</p>
+          </div>
+          <p class="testimonials__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
+            quia, libero similique ex natus dolores!
+          </p>
+        </div>
+      </div>
+    </section>
 
     <section class="blog"></section>
 
     <footer>
-      <p>&copy; 2024 O <span>Grimório</span>. All rights reserved.</p>
+      <p>&copy; 2024 <span>O Grimório</span>. All rights reserved.</p>
     </footer>
   </body>
 </html>
