--- a/index.html
+++ b/index.html
@@ -91,7 +91,32 @@
 
     <section class="products"></section>
 
-    <section class="categories"></section>
+    <section class="categories">
+      <div class="category" id="category1">
+        <div class="category__section">
+          <h2 class="category__title">casais</h2>
+          <div class="category__cta">Veja Agora</div>
+        </div>
+      </div>
+      <div class="category" id="category2">
+        <div class="category__section">
+          <h2 class="category__title">Bdsm & Fetish</h2>
+          <div class="category__cta">Veja Agora</div>
+        </div>
+      </div>
+      <div class="category" id="category3">
+        <div class="category__section">
+          <h2 class="category__title">Lingerie</h2>
+          <div class="category__cta">Veja Agora</div>
+        </div>
+      </div>
+      <div class="category" id="category4">
+        <div class="category__section">
+          <h2 class="category__title">Banho & Corpo</h2>
+          <div class="category__cta">Veja Agora</div>
+        </div>
+      </div>
+    </section>
 
     <section class="shipping">
       <h2 class="shipping__title">Seu lugar de prazer</h2>
@@ -115,7 +140,18 @@
       </div>
     </section>
 
-    <section class="banner"></section>
+    <section class="banner" id="banner1">
+      <h2 class="banner__title">XxXTarolho6664206924XxX</h2>
+      <p class="banner__details">Um belo tarolho da marca Geraldo</p>
+      <a
+        href="https://www.google.com/"
+        target="_blank"
+        class="banner__btn btn"
+        id="carousel-btn"
+        draggable="false"
+        >Boom</a
+      >
+    </section>
 
     <section class="marcas"></section>
 
