--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="categories">
       <div class="category" id="category1">
         <div class="category__section">
-          <h2 class="category__title">casais</h2>
+          <h2 class="category__title">Casais</h2>
           <div class="category__cta">Veja Agora</div>
         </div>
       </div>
@@ -223,7 +223,10 @@
       </div>
     </section>
 
-    <section class="blog"></section>
+    <section class="instagram">
+      <h2 class="instagram__title">Instagram</h2>
+      <div class="intagram__posts" data-behold-id="QwKUteDdcbgQ4nhzxfmr"></div>
+    </section>
 
     <footer>
       <p>&copy; 2024 <span>O Grimório</span>. All rights reserved.</p>
