--- a/index.html
+++ b/index.html
@@ -29,6 +29,26 @@
     <script defer src="scripts/script.js"></script>
   </head>
 
+  <nav role="navigation">
+    <div id="menu">
+      <input id="menu__checkbox" type="checkbox" />
+
+      <span></span>
+      <span></span>
+      <span></span>
+
+      <ul id="menu__list">
+        <a href="#"><li>Home</li></a>
+        <a href="#"><li>Products</li></a>
+        <a href="#"><li>Info</li></a>
+        <a href="#"><li>Contact</li></a>
+        <a href="https://erikterwan.com/" target="_blank"
+          ><li>Show me more</li></a
+        >
+      </ul>
+    </div>
+  </nav>
+
   <body>
     <header class="main-carousel">
       <div class="main-carousel__cell" id="main-banner1">
@@ -89,7 +109,9 @@
       </div>
     </header>
 
-    <section class="products"></section>
+    <section class="products">
+      <h2 class="products__title">Produtos 1</h2>
+    </section>
 
     <section class="categories">
       <div class="category" id="category1">
@@ -118,6 +140,19 @@
       </div>
     </section>
 
+    <section class="banner" id="banner1">
+      <h2 class="banner__title">XxXTarolho6664206924XxX</h2>
+      <p class="banner__details">Um belo tarolho da marca Geraldo</p>
+      <a
+        href="https://www.google.com/"
+        target="_blank"
+        class="banner__btn btn"
+        id="carousel-btn"
+        draggable="false"
+        >Boom</a
+      >
+    </section>
+
     <section class="shipping">
       <h2 class="shipping__title">Seu lugar de prazer</h2>
       <div class="shipping__section">
@@ -140,7 +175,11 @@
       </div>
     </section>
 
-    <section class="banner" id="banner1">
+    <section class="products">
+      <h2 class="products title">Produtos2</h2>
+    </section>
+
+    <section class="banner" id="banner3">
       <h2 class="banner__title">XxXTarolho6664206924XxX</h2>
       <p class="banner__details">Um belo tarolho da marca Geraldo</p>
       <a
@@ -152,8 +191,6 @@
         >Boom</a
       >
     </section>
-
-    <section class="marcas"></section>
 
     <section class="testimonials">
       <h2 class="testimonials__title">
@@ -228,7 +265,11 @@
       <div class="intagram__posts" data-behold-id="QwKUteDdcbgQ4nhzxfmr"></div>
     </section>
 
-    <footer>
+    <section class="recommendations">
+      <h2 class="recommendations__title">Nossas recomendações</h2>
+    </section>
+
+    <footer class="footer">
       <p>&copy; 2024 <span>O Grimório</span>. All rights reserved.</p>
     </footer>
   </body>
