--- a/index.html
+++ b/index.html
@@ -38,13 +38,10 @@
       <span></span>
 
       <ul id="menu__list">
-        <a href="#"><li>Home</li></a>
-        <a href="#"><li>Products</li></a>
-        <a href="#"><li>Info</li></a>
-        <a href="#"><li>Contact</li></a>
-        <a href="https://erikterwan.com/" target="_blank"
-          ><li>Show me more</li></a
-        >
+        <a href="index.html"><li>Home</li></a>
+        <a href="products.html"><li>Produtos</li></a>
+        <a href="mais-vendidos.html"><li>Mais Vendidos</li></a>
+        <a href="about.html"><li>Sobre</li></a>
       </ul>
     </div>
   </nav>
@@ -54,7 +51,7 @@
       <div class="main-carousel__cell" id="main-banner1">
         <h2 class="main-carousel__title">Lorem Ipsum</h2>
         <p class="main-carousel__subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+          Desperte sua paixão com nossos produtos exclusivos!
         </p>
         <a
           href="https://wa.me/p/7709211875811920/5511954967541"
@@ -68,7 +65,7 @@
       <div class="main-carousel__cell" id="main-banner2">
         <h2 class="main-carousel__title">Lorem Ipsum</h2>
         <p class="main-carousel__subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+          Prazer garantido com discrição total.
         </p>
         <a
           href="https://wa.me/p/7709211875811920/5511954967541"
@@ -82,7 +79,7 @@
       <div class="main-carousel__cell" id="main-banner3">
         <h2 class="main-carousel__title">Lorem Ipsum</h2>
         <p class="main-carousel__subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+          Revolucione sua vida íntima hoje mesmo.
         </p>
         <a
           href="https://wa.me/p/7709211875811920/5511954967541"
@@ -96,7 +93,7 @@
       <div class="main-carousel__cell" id="main-banner4">
         <h2 class="main-carousel__title">Lorem Ipsum</h2>
         <p class="main-carousel__subtitle">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur?
+          Produtos irresistíveis para momentos inesquecíveis.
         </p>
         <a
           href="https://wa.me/p/7709211875811920/5511954967541"
@@ -141,8 +138,10 @@
     </section>
 
     <section class="banner" id="banner1">
-      <h2 class="banner__title">XxXTarolho6664206924XxX</h2>
-      <p class="banner__details">Um belo tarolho da marca Geraldo</p>
+      <h2 class="banner__title">Penis</h2>
+      <p class="banner__details">
+        Prazer garantido com nosso dildo de alta qualidade.
+      </p>
       <a
         href="https://www.google.com/"
         target="_blank"
@@ -180,8 +179,10 @@
     </section>
 
     <section class="banner" id="banner3">
-      <h2 class="banner__title">XxXTarolho6664206924XxX</h2>
-      <p class="banner__details">Um belo tarolho da marca Geraldo</p>
+      <h2 class="banner__title">Penis</h2>
+      <p class="banner__details">
+        Design realista, toque suave e prazer incomparável.
+      </p>
       <a
         href="https://www.google.com/"
         target="_blank"
@@ -193,80 +194,167 @@
     </section>
 
     <section class="testimonials">
-      <h2 class="testimonials__title">
+      <h2 class="testimonials__title center">
         Veja a experiência dos nossos maravilhosos clientes
       </h2>
       <div class="testimonials__carousel">
         <div class="testimonials__cell" id="testimonials-banner1">
           <div class="testimonials__rating">
             <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
-            <p class="testimonials__date">01/01/01</p>
+            <p class="testimonials__date">12/03/21</p>
           </div>
           <p class="testimonials__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            quia, libero similique ex natus dolores!
+            Produto excelente! Melhor experiência que já tive. Recomendo para
+            todos!
           </p>
         </div>
         <div class="testimonials__cell" id="testimonials-banner1">
           <div class="testimonials__rating">
-            <p class="testimonials__grade">❤︎❤︎❤︎</p>
-            <p class="testimonials__date">01/01/01</p>
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">15/01/22</p>
           </div>
           <p class="testimonials__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            quia, libero similique ex natus dolores!
+            Qualidade incrível, entrega discreta. Estou muito satisfeita com a
+            compra!
           </p>
         </div>
         <div class="testimonials__cell" id="testimonials-banner1">
           <div class="testimonials__rating">
-            <p class="testimonials__grade">❤︎❤︎❤︎❤︎</p>
-            <p class="testimonials__date">01/01/01</p>
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">28/10/22</p>
           </div>
           <p class="testimonials__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            quia, libero similique ex natus dolores!
+            Transformou minha vida sexual. Sensacional!
           </p>
         </div>
         <div class="testimonials__cell" id="testimonials-banner1">
           <div class="testimonials__rating">
-            <p class="testimonials__grade">❤︎❤︎</p>
-            <p class="testimonials__date">01/01/01</p>
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">05/06/23</p>
           </div>
           <p class="testimonials__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            quia, libero similique ex natus dolores!
+            Produtos maravilhosos e atendimento impecável. Voltarei a comprar!
           </p>
         </div>
         <div class="testimonials__cell" id="testimonials-banner1">
           <div class="testimonials__rating">
-            <p class="testimonials__grade">❤︎</p>
-            <p class="testimonials__date">01/01/01</p>
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">08/12/23</p>
           </div>
           <p class="testimonials__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            quia, libero similique ex natus dolores!
+            Superou minhas expectativas! Ótima variedade e qualidade.
           </p>
         </div>
         <div class="testimonials__cell" id="testimonials-banner1">
           <div class="testimonials__rating">
-            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎❤︎</p>
-            <p class="testimonials__date">01/01/01</p>
+            <p class="testimonials__grade">❤︎❤︎❤︎❤︎❤︎</p>
+            <p class="testimonials__date">15/01/24</p>
           </div>
           <p class="testimonials__text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam
-            quia, libero similique ex natus dolores!
+            Entrega rápida, produtos de alta qualidade. Muito satisfeita!
           </p>
         </div>
       </div>
     </section>
 
     <section class="instagram">
-      <h2 class="instagram__title">Instagram</h2>
+      <img
+        src="imgs/instagram-background.jpg"
+        alt="Instagram background"
+        class="instagram__background"
+      />
+      <h2 class="instagram__title center">Ultimas novidades</h2>
       <div class="intagram__posts" data-behold-id="QwKUteDdcbgQ4nhzxfmr"></div>
     </section>
 
     <section class="recommendations">
-      <h2 class="recommendations__title">Nossas recomendações</h2>
+      <h2 class="recommendations__title center">Nossas recomendações</h2>
+      <div class="recommendations__product">
+        <img
+          src="imgs/products/PBP1.jpg"
+          alt="Imagem do produto 1"
+          class="recommendations__product__image"
+        />
+        <div class="recommendations__product__holder">
+          <h3 class="recommendations__product__title">
+            Garji - Por baixo das pernas
+          </h3>
+          <p class="recommendations__product__subtitle">
+            Gel com função adstringente
+          </p>
+          <a
+            href="https://wa.me/p/7709211875811920/5511954967541"
+            target="_blank"
+            class="recommendations__product__btn btn"
+            id="main-btn"
+            draggable="false"
+            >Confira</a
+          >
+        </div>
+      </div>
+      <div class="recommendations__product">
+        <img
+          src="imgs/products/Penalti1.jpg"
+          alt="Imagem do produto 2"
+          class="recommendations__product__image"
+        />
+        <div class="recommendations__product__holder">
+          <h3 class="recommendations__product__title">Garji - É Pênalti</h3>
+          <p class="recommendations__product__subtitle">Gel facilitador anal</p>
+          <a
+            href="https://wa.me/p/7550468991709762/5511954967541"
+            target="_blank"
+            class="recommendations__product__btn btn"
+            id="main-btn"
+            draggable="false"
+            >Confira</a
+          >
+        </div>
+      </div>
+      <div class="recommendations__product">
+        <img
+          src="imgs/products/Gol.jpg"
+          alt="Imagem do produto 3"
+          class="recommendations__product__image"
+        />
+        <div class="recommendations__product__holder">
+          <h3 class="recommendations__product__title">Garji - É Gol</h3>
+          <p class="recommendations__product__subtitle">
+            Gel com função dessensibilizante
+          </p>
+          <a
+            href="https://wa.me/p/8030921983619169/5511954967541"
+            target="_blank"
+            class="recommendations__product__btn btn"
+            id="main-btn"
+            draggable="false"
+            >Confira</a
+          >
+        </div>
+      </div>
+      <div class="recommendations__product">
+        <img
+          src="imgs/products/Gol.jpg"
+          alt="Imagem do produto 1"
+          class="recommendations__product__image"
+        />
+        <div class="recommendations__product__holder">
+          <h3 class="recommendations__product__title">
+            Garji - Por baixo das pernas
+          </h3>
+          <p class="recommendations__product__subtitle">
+            Gel com função adstringente
+          </p>
+          <a
+            href="https://wa.me/p/7709211875811920/5511954967541"
+            target="_blank"
+            class="recommendations__product__btn btn"
+            id="main-btn"
+            draggable="false"
+            >Confira</a
+          >
+        </div>
+      </div>
     </section>
 
     <footer class="footer">
