--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       defer
       src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
     ></script>
-    <script defer src="scripts/script.js"></script>
+    <script defer type="module" src="scripts/script.js"></script>
   </head>
 
   <nav role="navigation">
